<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/botoom_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/delete_sure"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1.0"
            android:text="@string/delete" />

        <Button
            android:id="@+id/delete_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1.0"
            android:text="@string/cancel" />
    </LinearLayout>

    <TextView
        android:id="@+id/empty_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_recording_file"
        android:textColor="@drawable/textcolor_selector"
        android:textSize="@dimen/text_size_30"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/file_list_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/botoom_layout"
        android:orientation="vertical" >
    </LinearLayout>

</RelativeLayout>